--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 mongodb = "mongodb+srv://ghost:<password>@cluster0.z0jsvx7.mongodb.net/?retryWrites=true&w=majority"
 sendemail = 'gmail'
-fromsendemail = 'dluise138@gmail.com'
-sendpwmail = "1000&1000"
+fromsendemail = 'remotamobile@gmail.com'
+sendpwmail = "xsxhbyziwamlhail"
 
 GET APIKEY RECAPTCHA From https://www.google.com/recaptcha/admin/create
 
