--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-mongodb = "mongodb+srv://ghost:<password>@cluster0.z0jsvx7.mongodb.net/?retryWrites=true&w=majority"
+mongodb = "mongodb+srv://ghost:devilvats@cluster0.z0jsvx7.mongodb.net/?retryWrites=true&w=majority"
 sendemail = 'gmail'
 fromsendemail = 'remotamobile@gmail.com'
 sendpwmail = "xsxhbyziwamlhail"
