--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ sendpwmail = "xsxhbyziwamlhail"
 
 GET APIKEY RECAPTCHA From https://www.google.com/recaptcha/admin/create
 
-recaptcha_key_1 = 'Key recaptchaV1 Kamu'
-recaptcha_key_2 = 'Key recaptchaV2 Kamu'
+recaptcha_key_1 = '6LfXE24nAAAAADhYJezrNW2esvgqnjYEdpOkzH2R'
+recaptcha_key_2 = '6LfXE24nAAAAAJl8YCGADL6FQC1KANPFpNePVfcj'
